# Bi_Memit

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  INNOVATION.md  Makefile  PROJECT_STRUCTURE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_notebook.py
docs/: README.md
docs/api/: index.md
docs/project/: CHANGELOG.md  DIRECTORY_STRUCTURE.md  README_original_memit.md
docs/tutorials/: installation.md  quickstart.md
examples/: advanced_bidirectional_demo.py  simple_edit.py
examples/notebooks/dsets/: mod_counter.py
examples/notebooks/experiments/: causal_trace.py  evaluate.py
examples/notebooks/experiments/py/: eval_utils_mod.py
examples/notebooks/rome/: repr_tools.py
legacy/data_generators/CF_collector/: clean_counterfact_test.py  clean_zsre_test.py  cleaned_sor.py  convert.py  counterfact_API_relation_extraction.py  counterfact_dataset.py  counterfact_generality.py  counterfact_locality.py  counterfact_new_dataset.py  counterfact_new_dataset_API.py  counterfact_relation_extraction.py  counterfact_sor.py  generate_counterfact_test.py  memit_dataset_links.txt  zsre_eval_relation_extraction.py  zsre_id.py
legacy/data_generators/CF_collector/utils/: wiki_extract.py
legacy/data_generators/ZSRE_collector/: counterfact_generation.py  extract_from_embed.py  gen_gen.py  loca_gen.py  models.py  question_frequent.py  relation_extraction.py  submit_loc_gen.sh  zsre_base_generation.py  zsre_generation.py  zsre_generation_test.py  zsre_test_generation.py  zsre_train_generation.py
legacy/dsets/: mod_zsre.py
legacy/memit/: memit_main.py
legacy/rome/: compute_v.py
notebooks/: bidirectional_editing_demo.ipynb
src/: __init__.py  cli.py
src/algorithms/: __init__.py  bidirectional_core.py
src/algorithms/memit/: __init__.py  bidirectional_memit.py
src/algorithms/mend/: __init__.py
src/algorithms/rome/: __init__.py  bidirectional_rome.py  compute_u.py
src/data/: __init__.py
src/util/: __init__.py  generate.py  globals.py  hparams.py  logit_lens.py  nethook.py  perplexity.py  runningstats.py
tests/: conftest.py  test_memit.py
